--- a/tasks/backup-restore.yml
+++ b/tasks/backup-restore.yml
@@ -1,27 +1,44 @@
 ---
 
 - name: Ensure scripts directory exists
-  file: path={{ scriptsdir }} state=directory mode=0755
+  ansible.builtin.file:
+    path: "{{ scriptsdir }}"
+    state: "directory"
+    mode: "0755"
 
-- name: add backup script
-  template: src=backup-fact.sh.j2 dest={{ scriptsdir }}/backup-fact.sh mode=0755
-- name: add restore script
-  template: src=restore-fact.sh.j2 dest={{ scriptsdir }}/restore-fact.sh mode=0755
+- name: Add backup script
+  ansible.builtin.template:
+    src: "backup-fact.sh.j2"
+    dest: "{{ scriptsdir }}/backup-fact.sh"
+    mode: "0755"
+- name: Add restore script
+  ansible.builtin.template:
+    src: "restore-fact.sh.j2"
+    dest: "{{ scriptsdir }}/restore-fact.sh"
+    mode: "0755"
 
-- name: apt | ensure cron is installed
-  apt: name=cron state=present
+- name: Debian | ensure cron is installed
+  ansible.builtin.apt:
+    name: cron
+    state: present
   when: ansible_os_family == 'Debian'
   register: pkg_result
   until: pkg_result is success
 
-- name: yum | ensure cron is installed
-  yum: name=crontabs state=present
+- name: Redhat | ensure cron is installed
+  ansible.builtin.yum:
+    name: crontabs
+    state: present
   when: ansible_os_family == "RedHat"
   register: pkg_result
   until: pkg_result is success
 
-- name: setup cron backup
-  cron: name="fact-backup" minute="3" hour="23" weekday="0"
-    job="{{ scriptsdir }}/backup-fact.sh > /dev/null 2>&1"
-    user=root
-    cron_file=ansible_fact-backup
+- name: Setup cron backup
+  ansible.builtin.cron:
+    name: "fact-backup"
+    minute: "3"
+    hour: "23"
+    weekday: "0"
+    job: "{{ scriptsdir }}/backup-fact.sh > /dev/null 2>&1"
+    user: root
+    cron_file: ansible_fact-backup
