--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,19 +2,23 @@
 # tasks file for juju4.fact
 
 - name: Include version-specific variables for Ubuntu.
-  include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
+  ansible.builtin.include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
   when: ansible_distribution == 'Ubuntu'
 - name: Include version-specific variables for RedHat
-  include_vars: "RedHat-{{ ansible_distribution_major_version }}.yml"
+  ansible.builtin.include_vars: "RedHat-{{ ansible_distribution_major_version }}.yml"
   when: ansible_os_family == "RedHat" and ansible_distribution != 'Fedora'
 - name: Include for Fedora
-  include_vars: "Fedora.yml"
+  ansible.builtin.include_vars: "Fedora.yml"
   when: ansible_distribution == 'Fedora'
 
-- include_tasks: mongodb-thp.yml
+- name: Include mongodb-thp
+  ansible.builtin.include_tasks: mongodb-thp.yml
   when: fact_version is regex('^3\.')
-- include_tasks: fact.yml
+- name: Include fact
+  ansible.builtin.include_tasks: fact.yml
 
-- include_tasks: backup-restore.yml
-- include_tasks: fact-restore.yml
+- name: Include backup-restore
+  ansible.builtin.include_tasks: backup-restore.yml
+- name: Include fact-restore
+  ansible.builtin.include_tasks: fact-restore.yml
   when: fact_restore_archive|string
