--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -2,14 +2,14 @@
 # https://github.com/MISP/MISP/blob/2.4/INSTALL/INSTALL.rhel7.txt#L368
 
 - name: Ensure lief dependencies are present
-  package:
+  ansible.builtin.package:
     name:
       - cmake
       - gcc
     state: present
 
 - name: Install lief - may take a while
-  pip:
+  ansible.builtin.pip:
     name: lief
     state: present
     version: "{{ fact_lief_version | default(omit) }}"
@@ -19,7 +19,7 @@
   until: pkg_result is success
 
 - name: Ensure LIEF is working
-  command: "python3 -c 'import lief'"
+  ansible.builtin.command: "python3 -c 'import lief'"
   environment:
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   changed_when: false
