--- a/test/integration/default-HEAD/default.yml
+++ b/test/integration/default-HEAD/default.yml
@@ -18,6 +18,7 @@
       when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int == 18)
   roles:
     - { role: geerlingguy.postgresql, when: fact_version is regex('^4\.') or fact_version == 'HEAD' }
+    - { role: geerlingguy.nodejs, when: fact_version is regex('^4\.') or fact_version == 'HEAD' }
     - juju4.fact
 
 - name: Verify playbook
