ci(molecule): update format to latest galaxy

--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -1,5 +1,6 @@
 ---
 
-- name: geerlingguy.docker
-- name: geerlingguy.nodejs
-- name: geerlingguy.postgresql
+roles:
+  - name: geerlingguy.docker
+  - name: geerlingguy.nodejs
+  - name: geerlingguy.postgresql
