chore: fix ansible-lint 6.15.0 (2)

--- a/test/integration/default-HEAD/default.yml
+++ b/test/integration/default-HEAD/default.yml
@@ -1,21 +1,22 @@
 ---
 
-- hosts: all
+- name: Test integration playbook
+  hosts: all
   vars:
     fact_version: HEAD
   pre_tasks:
     - name: Install python3
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3-minimal)
+      ansible.builtin.raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3-minimal)
       register: python3
       changed_when: "'installed' in python3.stdout"
-      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int >= 18)
+      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 18)
     - name: Gather Facts
-      setup:
-      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int == 18)
+      ansible.builtin.setup:
+      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 18)
     - name: Ubuntu Bionic | Enforce python3 for ansible
-      set_fact:
+      ansible.builtin.set_fact:
         ansible_python_interpreter: /usr/bin/python3
-      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version|int == 18)
+      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 18)
   roles:
     - { role: geerlingguy.postgresql, when: fact_version is regex('^4\.') or fact_version == 'HEAD' }
     - { role: geerlingguy.nodejs, when: fact_version is regex('^4\.') or fact_version == 'HEAD' }
@@ -23,5 +24,4 @@
 
 - name: Verify playbook
   # import_playbook: verify.yml
-  # in kitchen
-  import_playbook: /tmp/kitchen/juju4.fact/molecule/default/verify.yml
+  import_playbook: ../../../molecule/default/verify.yml
