--- a/.github/workflows/default-HEAD-kitchen.yml
+++ b/.github/workflows/default-HEAD-kitchen.yml
@@ -63,7 +63,7 @@ jobs:
           cd $GITHUB_WORKSPACE/juju4.fact
           [ -f get-dependencies.sh ] && sh -x get-dependencies.sh
           [ -f molecule/default/requirements.yml ] && ansible-galaxy install -r molecule/default/requirements.yml
-          { echo '[defaults]'; echo 'callback_whitelist = profile_tasks, timer'; echo 'roles_path = ../:/home/runner/.ansible/roles'; echo 'ansible_python_interpreter: /usr/bin/python3'; } >> ansible.cfg
+          { echo '[defaults]'; echo 'callbacks_enabled = profile_tasks, timer'; echo 'roles_path = ../:/home/runner/.ansible/roles'; echo 'ansible_python_interpreter: /usr/bin/python3'; } >> ansible.cfg
           { echo '[facthosts]'; echo 'localhost'; } >> inventory
           cat inventory
           sed -ri 's/hosts: facthosts/hosts: all/' molecule/default/verify.yml
