--- a/test/integration/default-HEAD/default.yml
+++ b/test/integration/default-HEAD/default.yml
@@ -24,4 +24,4 @@
 
 - name: Verify playbook
   # import_playbook: verify.yml
-  import_playbook: molecule/default/verify.yml
+  import_playbook: ../../../molecule/default/verify.yml
