--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -19,6 +19,6 @@
     - { role: geerlingguy.postgresql, when: fact_version is regex('^4\.') or fact_version == 'HEAD' }
     - juju4.fact
 
-- name: Verify playbook
-  # import_playbook: verify.yml
-  import_playbook: ../../../molecule/default/verify.yml
+# - name: Verify playbook
+#   # import_playbook: verify.yml
+#   import_playbook: ../../../molecule/default/verify.yml
