--- a/vars/Ubuntu-22.04.yml
+++ b/vars/Ubuntu-22.04.yml
@@ -19,6 +19,10 @@ fact_pkgs:
   - clamav-daemon
   - jq
 
+fact_conflict_pkgs:
+  - python-blinker
+  - python3-blinker
+
 fact_binwalk_pkgs:
   - xvfb
 
