--- a/tasks/fact.yml
+++ b/tasks/fact.yml
@@ -70,7 +70,7 @@
 - name: FACT pre-install | Add docker to pip requirements for ansible module
   ansible.builtin.lineinfile:
     dest: "{{ fact_root }}/src/install/requirements_pre_install.txt"
-    mode: 0644
+    mode: '0644'
     line: docker
 
 - name: FACT pre-install | pip dependencies
