--- a/vars/Ubuntu-20.04.yml
+++ b/vars/Ubuntu-20.04.yml
@@ -6,6 +6,8 @@ fact_pkgs:
   - python3
   - python3-pip
   - python3-dev
+  - python3-virtualenv
+  - python3-venv
   - apt-transport-https
   - build-essential
   - automake
