--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -11,10 +11,12 @@
     - name: Gather Facts
       ansible.builtin.setup:
       when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 18)
-    - name: Ubuntu Bionic | Enforce python3 for ansible
+    - name: Ubuntu | Enforce python3 for ansible
       ansible.builtin.set_fact:
         ansible_python_interpreter: /usr/bin/python3
-      when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int == 18)
+      when:
+        - (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int >= 18)
+        - (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | int <= 22)
   roles:
     - { role: geerlingguy.postgresql, when: fact_version is regex('^4\.') or fact_version == 'HEAD' }
     - juju4.fact
